--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: blog # the main title
+title: cyber blog - and maybe other stuffs # the main title
 
 tagline: :(){:|:&}:; # it will display as the subtitle
 
