--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: h-ssh blog # the main title
+title: bGlnbWE= # the main title
 
 tagline: general shitposts about cyber and other things i find interesting... feel free to ignore
 
